--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,7 +1,11 @@
+nav {
+  background-color: $light-bg;
+}
 .nav-center {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 1rem;
 }
 .nav-header {
   position: relative;
@@ -13,12 +17,14 @@
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: -1;
+    z-index: 1;
     transform: skewX(-15deg);
     background-color: $main-color;
     box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
   }
   h1 {
+    position: relative;
+    z-index: 2;
     padding: 0.5rem;
     font-weight: 300;
     color: #bbb;
@@ -27,4 +33,84 @@
       color: $light-bg;
     }
   }
+}
+.nav-links {
+  display: flex;
+  li {
+    a {
+      padding: 1rem;
+      margin: 1rem;
+      border-bottom: 1px solid #ccc;
+      &:hover {
+        color: $main-color;
+        border-bottom: 1px solid $main-color;
+      }
+    }
+  }
+}
+.nav-controls {
+  .control-icons {
+    @include icon-hover();
+    font-size: 1.5rem;
+    margin: 1rem;
+  }
+}
+.sale-banner {
+  background-color: $main-color;
+  color: $light-bg;
+  padding: 0.5rem;
+  text-align: center;
+  a {
+    color: $light-bg;
+    text-decoration: underline;
+  }
+}
+.menu-bars {
+  color: $light-bg;
+  background-color: $main-color;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.5rem;
+  display: grid;
+  place-content: center;
+  padding: 5px;
+  height: fit-content;
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and (max-width: 800px) {
+  .nav-center {
+    flex-direction: column;
+  }
+  .menu-bars {
+    display: grid;
+  }
+  .nav-links {
+    height: 0;
+    overflow: hidden;
+    flex-direction: column;
+    width: 100%;
+    text-align: right;
+    transition: all 0.5s ease-in-out;
+
+    li {
+      margin: 0.5rem;
+      a {
+        padding: 0;
+        display: block;
+        width: 100%;
+        margin: 0;
+      }
+    }
+  }
+
+  .mobile-header {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+.active-menu {
+  height: 8rem;
 }
