--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -3,5 +3,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+a {
   color: $secondary-color;
+  text-decoration: none;
+}
+li {
+  list-style-type: none;
+}
+button {
+  outline: none;
 }
