--- a/src/css/main.css
+++ b/src/css/main.css
@@ -182,13 +182,16 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .deals h1 {
   font-size: 4.5rem;
+  text-shadow: 2px 2px 2px #000000;
 }
 
 .deals h2 {
   font-size: 2rem;
   text-align: right;
+  text-shadow: 2px 2px 2px #000000;
 }
