--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -28,12 +28,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
 
   h1 {
     font-size: 4.5rem;
+    text-shadow: 2px 2px 2px #000000;
   }
   h2 {
     font-size: 2rem;
     text-align: right;
+    text-shadow: 2px 2px 2px #000000;
   }
 }
