--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,22 @@ button {
   outline: none;
 }
 
+img {
+  width: 100%;
+}
+
+.control-icons {
+  color: #424242;
+  cursor: pointer;
+  font-size: 1.5rem;
+  margin: 1rem;
+}
+
+.control-icons:hover {
+  color: #016a78;
+  transform: scale(1.1);
+}
+
 nav {
   background-color: #f6f6f6;
 }
@@ -194,4 +210,68 @@ nav {
   font-size: 2rem;
   text-align: right;
   text-shadow: 2px 2px 2px #000000;
+}
+
+.list-title {
+  width: 90vw;
+  margin: 2rem auto;
+}
+
+.list {
+  width: 90vw;
+  margin: 2rem auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
+}
+
+.list .list-item {
+  background-color: #f6f6f6;
+  border: 1px solid #eee;
+  padding: 1rem 1rem 0.25rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.list .list-item h3 {
+  color: #424242;
+  font-size: 0.95rem;
+}
+
+.list .list-item p {
+  color: #999;
+  font-size: 0.75rem;
+}
+
+.list .list-item .img-container {
+  max-width: 250px;
+}
+
+.list .list-item .info-box {
+  width: 100%;
+}
+
+.list .list-item .price-box {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.list .list-item .price-box .price h2 {
+  color: #016a78;
+}
+
+.list .list-item .price-box .controls {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 0.5rem;
+  font-size: 1.5rem;
+  color: #424242;
+}
+
+.list .list-item .price-box .controls .control-icons {
+  margin: 0;
 }
