--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -40,3 +40,59 @@
     text-shadow: 2px 2px 2px #000000;
   }
 }
+.list-title {
+  width: 90vw;
+  margin: 2rem auto;
+}
+.list {
+  width: 90vw;
+  margin: 2rem auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
+
+  .list-item {
+    background-color: $light-bg;
+    border: 1px solid #eee;
+    padding: 1rem 1rem 0.25rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h3 {
+      color: $secondary-color;
+      font-size: 0.95rem;
+    }
+    p {
+      color: #999;
+      font-size: 0.75rem;
+    }
+    .img-container {
+      max-width: 250px;
+    }
+    .info-box {
+      width: 100%;
+    }
+    .price-box {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      .price {
+        h2 {
+          color: $main-color;
+        }
+      }
+      .controls {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        grid-gap: 0.5rem;
+        font-size: 1.5rem;
+        color: $secondary-color;
+        .control-icons {
+          margin: 0;
+        }
+      }
+    }
+  }
+}
