--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -1,6 +1,7 @@
 $main-color: #016a78;
 $secondary-color: #424242;
 $light-bg: #f6f6f6;
+$sale-color: #d80e2f;
 
 @mixin icon-hover {
   color: $secondary-color;
