--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import './utilities';
 @import './base';
 @import './loading';
+@import './error';
 @import './navbar';
 @import './home';
 @import './listItem';
