working on single product page

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -12,6 +12,9 @@ footer {
       flex-direction: column;
       margin: auto;
       align-items: center;
+      input {
+        padding: 5px;
+      }
       button {
         margin: 0.5rem;
         color: $light-bg;
