--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -43,8 +43,7 @@
 .list-title {
   width: 90vw;
   margin: 2rem auto;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  @include top-bottom-border();
   color: $main-color;
 }
 .list {
