--- a/src/scss/_singleProduct.scss
+++ b/src/scss/_singleProduct.scss
@@ -1,3 +1,51 @@
-.product-img-container {
-  width: 200px;
+.single-product-header {
+  max-width: 90vw;
+  margin: 2rem auto;
+  header {
+    @include top-bottom-border();
+    small {
+      color: $muted;
+      margin-right: 1rem;
+    }
+    .type-rating {
+      max-width: 250px;
+    }
+  }
+  .info-banner {
+    position: relative;
+    padding: 0.5rem;
+    display: flex;
+
+    .sale-sticker,
+    .top-seller-sticker {
+      @include sticker-reset();
+    }
+  }
+  .header-wrapper {
+    display: flex;
+  }
+  .product-media {
+    flex: 1;
+    margin-right: 1rem;
+    background-color: $light-bg;
+    .product-img-container {
+      max-width: 400px;
+    }
+    .images-slider {
+      max-width: 150px;
+    }
+  }
+  .product-price-section {
+    flex: 1;
+    margin-left: 1rem;
+    .price {
+      h2 {
+        color: $main-color;
+        font-size: 2.5rem;
+      }
+      p {
+        color: $main-color;
+      }
+    }
+  }
 }
