--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,6 +41,7 @@ img {
   z-index: 1;
   color: #f6f6f6;
   padding: 0.05rem 0.35rem;
+  text-align: center;
 }
 
 .sale-sticker::before {
@@ -65,6 +66,7 @@ img {
   z-index: 1;
   color: #f6f6f6;
   padding: 0.05rem 0.35rem;
+  text-align: center;
   top: 35%;
 }
 
@@ -100,6 +102,17 @@ img {
 
 .outfostock-icon {
   color: #999;
+}
+
+.stock {
+  display: flex;
+  align-items: center;
+  font-size: 0.9rem;
+}
+
+.stock .stock-icon {
+  color: #016a78;
+  margin-left: 5px;
 }
 
 /*? SPINNER */
@@ -397,10 +410,6 @@ nav {
   margin: 0;
 }
 
-.list-item .stock-icon {
-  color: #016a78;
-}
-
 footer {
   background-color: #016a78;
   color: #f6f6f6;
@@ -513,34 +522,110 @@ footer .social-media svg:hover {
   margin: 0 0.5rem;
 }
 
-.single-product-header .header-wrapper {
+.single-product-header .header-content {
   display: flex;
 }
 
-.single-product-header .product-media {
+.single-product-header .product-left {
   flex: 1;
   margin-right: 1rem;
   background-color: #f6f6f6;
 }
 
-.single-product-header .product-media .product-img-container {
+.single-product-header .product-left .product-img-container {
   max-width: 400px;
 }
 
-.single-product-header .product-media .images-slider {
+.single-product-header .product-left .images-slider {
   max-width: 150px;
 }
 
-.single-product-header .product-price-section {
+.single-product-header .product-right {
   flex: 1;
   margin-left: 1rem;
 }
 
-.single-product-header .product-price-section .price h2 {
-  color: #016a78;
-  font-size: 2.5rem;
+.single-product-header .product-right .price-section {
+  background-color: #f6f6f6;
+  border: 1px solid #ddd;
+  padding: 1rem;
+  border-bottom: none;
 }
 
-.single-product-header .product-price-section .price p {
+.single-product-header .product-right .price-section h2 {
+  font-size: 2.5rem;
   color: #016a78;
+}
+
+.single-product-header .product-right .buy-section {
+  background-color: #f6f6f6;
+  border: 1px solid #ddd;
+  padding: 1rem;
+  border-top: none;
+}
+
+.single-product-header .product-right .buy-section form input {
+  margin: 0 0.5rem;
+  width: 2rem;
+}
+
+.single-product-header .product-right .buy-section form button {
+  margin: 0.5rem;
+  color: #f6f6f6;
+  background-color: #016a78;
+  border: none;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+  font-size: 1rem;
+}
+
+.single-product-header .product-right .buy-section form button svg {
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+.single-product-header .product-right .buy-section form button:hover {
+  margin: 0.5rem;
+  color: #f6f6f6;
+  background-color: #424242;
+  border: none;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+}
+
+.single-product-header .product-right .buy-section form small {
+  color: #999;
+}
+
+.single-product-header .product-right .buy-section .add-to-compare {
+  color: #424242;
+  cursor: pointer;
+  font-size: 1.5rem;
+  margin: 0.5rem;
+}
+
+.single-product-header .product-right .buy-section .add-to-compare:hover {
+  color: #016a78;
+  transform: scale(1.1);
+}
+
+.single-product-header .product-right .short-description {
+  margin-top: 1rem;
+  color: #424242;
+  line-height: 1.75rem;
+}
+
+.single-product-header .product-right .short-description button {
+  margin-left: 0.5rem;
+  border: none;
+  color: #016a78;
+  text-decoration: underline;
+  background-color: transparent;
+  cursor: pointer;
+  letter-spacing: 3px;
+}
+
+.single-product-header .product-right .short-description button:hover {
+  color: #02adc4;
 }
