--- a/src/scss/_error.scss
+++ b/src/scss/_error.scss
@@ -2,6 +2,7 @@
   grid-column: span 3;
   color: $sale-color;
   text-align: center;
+  margin-bottom: 3rem;
 
   .error-sign {
     font-size: 2.5rem;
