--- a/src/scss/_singleProduct.scss
+++ b/src/scss/_singleProduct.scss
@@ -103,7 +103,7 @@
       color: $secondary-color;
       line-height: 1.75rem;
 
-      button {
+      .read-more {
         margin-left: 0.5rem;
         border: none;
         color: $main-color;
