set up productcontext and reducer

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -43,8 +43,9 @@ img {
     color: #ffcc02;
   }
 }
-.outfostock-icon {
+.outofstock-icon {
   color: $muted;
+  margin-left: 5px;
 }
 .stock {
   display: flex;
