--- a/src/scss/_resultOptions.scss
+++ b/src/scss/_resultOptions.scss
@@ -1,3 +1,21 @@
+.result-options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+  @include top-bottom-border();
+}
+.display-options {
+  button {
+    @include secondary-btn();
+  }
+}
+.sorting-options {
+  label {
+    margin-right: 5px;
+  }
+}
+//?PAGINATION
 .pagination {
   display: flex;
   justify-content: center;
@@ -15,13 +33,11 @@
     color: $main-color;
     cursor: pointer;
     &:hover {
-      border-color: $light-bg;
       color: $light-bg;
       background-color: $main-color;
     }
   }
   .active-page {
-    border-color: $light-bg;
     color: $light-bg;
     background-color: $main-color;
     cursor: default;
