--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -49,6 +49,10 @@ nav {
       }
     }
   }
+  .active-link {
+    color: $main-color;
+    border-bottom: 1px solid $main-color;
+  }
 }
 .nav-controls {
   .control-icons {
