--- a/src/scss/_resultOptions.scss
+++ b/src/scss/_resultOptions.scss
@@ -8,6 +8,12 @@
 .display-options {
   button {
     @include secondary-btn();
+    &:hover {
+      background-color: $main-color;
+    }
+  }
+  .active-btn {
+    background-color: $main-color;
   }
 }
 .sorting-options {
