--- a/src/css/main.css
+++ b/src/css/main.css
@@ -231,14 +231,14 @@ nav {
   transform: scale(1.1);
 }
 
-.sale-banner {
+#sale-banner {
   background-color: #016a78;
   color: #f6f6f6;
   padding: 0.5rem;
   text-align: center;
 }
 
-.sale-banner a {
+#sale-banner a {
   color: #f6f6f6;
   text-decoration: underline;
 }
@@ -290,6 +290,26 @@ nav {
 
 .active-menu {
   height: 8rem;
+}
+
+.to-top {
+  color: #424242;
+  font-size: 2rem;
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+}
+
+.to-top-visible {
+  visibility: visible;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.to-top-visible:hover {
+  opacity: 1;
 }
 
 #hero {
