--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,5 +10,6 @@
 @import './recommendations';
 @import './overview';
 @import './products';
+@import './filters';
 @import './resultOptions';
 @import './about';
