--- a/src/css/main.css
+++ b/src/css/main.css
@@ -782,11 +782,32 @@ footer .social-media svg:hover {
 .filters {
   flex: 1;
   background-color: #f6f6f6;
+  padding: 0.5rem;
+  margin: 0 0.5rem;
 }
 
 .filters h1 {
   text-align: center;
   margin-top: 1rem;
+}
+
+.filters h3 {
+  margin-left: 0.5rem;
+  color: #016a78;
+}
+
+.filters ul {
+  background-color: #f6f6f6;
+  border: 1px solid #ddd;
+  padding: 1rem;
+}
+
+.filters ul li label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  text-transform: capitalize;
 }
 
 .result-options {
