--- a/src/scss/_filters.scss
+++ b/src/scss/_filters.scss
@@ -1,9 +1,27 @@
 .filters {
   flex: 1;
   background-color: $light-bg;
+  padding: 0.5rem;
+  margin: 0 0.5rem;
 
   h1 {
     text-align: center;
     margin-top: 1rem;
+  }
+  h3 {
+    margin-left: 0.5rem;
+    color: $main-color;
+  }
+  ul {
+    @include border-bg();
+    li {
+      label {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid #ddd;
+        text-transform: capitalize;
+      }
+    }
   }
 }
