added cart page

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -55,10 +55,30 @@ nav {
   }
 }
 .nav-controls {
-  .control-icons {
+  .navbar-icons {
+    @include reset-btn();
     @include icon-hover();
     font-size: 1.5rem;
-    margin: 1rem;
+    margin: 0.5rem;
+  }
+  .navbar-cart {
+    position: relative;
+    .cart-item-total {
+      position: absolute;
+      top: 0;
+      right: -0.5rem;
+      background-color: $main-color;
+      color: $light-bg;
+      font-size: 0.85rem;
+      width: 1.15rem;
+      height: 1.15rem;
+      border-radius: 50%;
+    }
+    &:hover {
+      .cart-item-total {
+        background-color: $secondary-color;
+      }
+    }
   }
 }
 #sale-banner {
