--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,18 +22,6 @@ img {
   width: 100%;
 }
 
-.control-icons {
-  color: #424242;
-  cursor: pointer;
-  font-size: 1.5rem;
-  margin: 1rem;
-}
-
-.control-icons:hover {
-  color: #016a78;
-  transform: scale(1.1);
-}
-
 .sale-sticker {
   position: absolute;
   top: 25%;
@@ -219,16 +207,38 @@ nav {
   border-bottom: 1px solid #016a78;
 }
 
-.nav-controls .control-icons {
+.nav-controls .navbar-icons {
+  background-color: transparent;
+  border: none;
   color: #424242;
   cursor: pointer;
   font-size: 1.5rem;
-  margin: 1rem;
+  margin: 0.5rem;
 }
 
-.nav-controls .control-icons:hover {
+.nav-controls .navbar-icons:hover {
   color: #016a78;
   transform: scale(1.1);
+}
+
+.nav-controls .navbar-cart {
+  position: relative;
+}
+
+.nav-controls .navbar-cart .cart-item-total {
+  position: absolute;
+  top: 0;
+  right: -0.5rem;
+  background-color: #016a78;
+  color: #f6f6f6;
+  font-size: 0.85rem;
+  width: 1.15rem;
+  height: 1.15rem;
+  border-radius: 50%;
+}
+
+.nav-controls .navbar-cart:hover .cart-item-total {
+  background-color: #424242;
 }
 
 #sale-banner {
@@ -932,4 +942,144 @@ footer .social-media svg:hover {
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   color: #016a78;
+}
+
+.cart {
+  max-width: 90vw;
+  margin: 2rem auto;
+  width: 100%;
+}
+
+.cart .cart-title {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
+
+.cart .clear-btn-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.cart .clear-btn-wrapper .clear-cart {
+  margin: 0.5rem;
+  color: #f6f6f6;
+  background-color: #424242;
+  border: none;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+}
+
+.cart .clear-btn-wrapper .clear-cart:hover {
+  background-color: #5c5c5c;
+}
+
+.cart .cart-total {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.your-cart {
+  min-height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.your-cart .empty-cart-msg {
+  color: #424242;
+}
+
+.your-cart {
+  display: flex;
+  flex-direction: column;
+}
+
+.your-cart .your-cart-item {
+  margin: 0.5rem 0;
+  background-color: #f6f6f6;
+  border: 1px solid #ddd;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 0.5rem;
+}
+
+.your-cart .your-cart-item .cart-item-img {
+  max-width: 125px;
+  grid-column: span 2;
+}
+
+.your-cart .your-cart-item .item-info {
+  grid-column: span 8;
+}
+
+.your-cart .your-cart-item .item-info a {
+  color: #016a78;
+}
+
+.your-cart .your-cart-item .item-info small {
+  color: #999;
+  font-size: 0.75rem;
+}
+
+.your-cart .your-cart-item .item-info p {
+  color: #999;
+  font-size: 0.85rem;
+}
+
+.your-cart .your-cart-item .item-price {
+  grid-column: span 2;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.your-cart .your-cart-item .item-price h3 {
+  font-size: 1.5rem;
+  color: #016a78;
+}
+
+.your-cart .your-cart-item .item-price .quantity-controls {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* Firefox */
+}
+
+.your-cart .your-cart-item .item-price .quantity-controls input::-webkit-outer-spin-button,
+.your-cart .your-cart-item .item-price .quantity-controls input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.your-cart .your-cart-item .item-price .quantity-controls input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+.your-cart .your-cart-item .item-price .quantity-controls input {
+  padding: 0 0.75rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  max-width: 1.25rem;
+}
+
+.your-cart .your-cart-item .item-price .quantity-controls button {
+  display: grid;
+  place-content: center;
+  font-size: 1rem;
+  background-color: transparent;
+  border: none;
+  color: #424242;
+  color: #424242;
+  cursor: pointer;
+}
+
+.your-cart .your-cart-item .item-price .quantity-controls button:hover {
+  color: #016a78;
+  transform: scale(1.1);
 }
