--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1015,6 +1015,10 @@ footer .social-media svg:hover {
 
 .your-cart .your-cart-item .item-info {
   grid-column: span 8;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
 }
 
 .your-cart .your-cart-item .item-info a {
@@ -1029,6 +1033,20 @@ footer .social-media svg:hover {
 .your-cart .your-cart-item .item-info p {
   color: #999;
   font-size: 0.85rem;
+}
+
+.your-cart .your-cart-item .item-info .delete-item {
+  font-size: 1rem;
+  background-color: transparent;
+  border: none;
+  color: #424242;
+  color: #424242;
+  cursor: pointer;
+}
+
+.your-cart .your-cart-item .item-info .delete-item:hover {
+  color: #016a78;
+  transform: scale(1.1);
 }
 
 .your-cart .your-cart-item .item-price {
