--- a/src/scss/_listItem.scss
+++ b/src/scss/_listItem.scss
@@ -47,7 +47,12 @@
       font-size: 1.5rem;
       color: $secondary-color;
       .control-icons {
+        @include reset-btn();
+        font-size: 1.5rem;
         margin: 0;
+        svg {
+          @include icon-hover();
+        }
       }
     }
   }
