--- a/src/scss/_listItem.scss
+++ b/src/scss/_listItem.scss
@@ -54,6 +54,13 @@
           @include icon-hover();
         }
       }
+      .disable-btn {
+        @include reset-btn();
+        font-size: 1.5rem;
+        margin: 0;
+        color: $muted;
+        cursor: not-allowed;
+      }
     }
   }
 }
