--- a/src/scss/_singleProduct.scss
+++ b/src/scss/_singleProduct.scss
@@ -76,7 +76,7 @@
           margin: 0 0.5rem;
           width: 2rem;
         }
-        button {
+        .add-to-cart-btn {
           @include primary-btn();
           font-size: 1rem;
 
@@ -88,6 +88,10 @@
             @include secondary-btn();
           }
         }
+        .disable {
+          @include disable-btn();
+        }
+
         small {
           color: $muted;
         }
